--- a/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
@@ -287,7 +287,7 @@
           <label class="item-title mgr-20" style="width: auto">15, Nhóm máu </label>
           <select formControlName="bloodGroup" class="form-control" required type="select" #bloodGroup>
             <option value="A">A</option>
-            <option value="B">A</option>
+            <option value="B">B</option>
             <option value="AB">AB</option>
             <option value="0">O</option>
           </select>
