--- a/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
+++ b/src/app/personnels/manager-catalog/catalog-faculty/catalog-faculty.component.html
@@ -36,9 +36,11 @@
         <!--<span class="action-icon" title="Xóa " (click)="removeItem(item)"><i class="fa fa-remove"></i></span>-->
       </td>
     </tr>
-    <td colspan="5">
-      <mfBootstrapPaginator ></mfBootstrapPaginator>
-    </td>
+    <tr class="footer-table-pager">
+      <td colspan="5">
+        <mfBootstrapPaginator></mfBootstrapPaginator>
+      </td>
+    </tr>
     </tbody>
   </table>
 </div>
@@ -156,7 +158,8 @@
     <div class="row">
       <div class="col-xs-12">
         <div class="table-responsive">
-          <table class="table table-bordered"  [mfData]="details.toArray()" #mfDetail="mfDataTable" [mfRowsOnPage]="numberShow">
+          <table class="table table-bordered" [mfData]="details.toArray()" #mfDetail="mfDataTable"
+                 [mfRowsOnPage]="numberShow">
             <thead>
             <tr>
               <th style="width:5%">STT</th>
@@ -182,12 +185,17 @@
                 <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
                 <!--<span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>-->
 
-                <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i class="fa fa-remove "></i></span>
+                <span class="action-icon" (click)="confirmDiaglog.open();itemDelete = item"><i
+                  class="fa fa-remove "></i></span>
               </td>
             </tr>
-            <td colspan="4" *ngIf="numberShow >= mfDetail.data.length && (details.size() - mfDetail.data.length) >=numberShow">
-              <mfBootstrapPaginator></mfBootstrapPaginator>
-            </td>
+
+            <tr class="footer-table-pager">
+              <td colspan="4">
+                <mfBootstrapPaginator></mfBootstrapPaginator>
+              </td>
+            </tr>
+
             </tbody>
           </table>
         </div>
