--- a/src/app/personnels/manager-catalog/catalog-search/catalog-search.component.css
+++ b/src/app/personnels/manager-catalog/catalog-search/catalog-search.component.css
@@ -21,3 +21,12 @@ tbody tr td {
   width: 300px !important;
   margin-bottom: 20px;
 }
+
+
+@media (max-width: 767px) {
+  .search {
+    margin-top: 20px;
+    width: 100% !important;
+    margin-bottom: 10px;
+  }
+}
