--- a/src/app/personnels/manager-catalog/catalog-search/catalog-search.component.html
+++ b/src/app/personnels/manager-catalog/catalog-search/catalog-search.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-xs-12 text-right">
-    <div class="col-xs-6">
+  <div class="col-xs-12 text-right mgb-xs-15">
+    <div class=" col-xs-12 col-sm-6" >
       <div class="row">
         <div class="col-xs-12 col-sm-3 text-left">
           Số lượng xem:
         </div>
-        <div class="col-xs-12 col-sm-3 text-left">
+        <div class="col-xs-12 col-sm-4 text-left ">
           <select name="" id="" class="form-control" [(ngModel)]="numberShow" (change)="numberViewChangeEvent(numberShow)">
             <option value="10">10</option>
             <option value="20">20</option>
@@ -17,7 +17,7 @@
         </div>
       </div>
     </div>
-    <div class="col-xs-6">
+    <div class="col-xs-12  col-sm-6" style="padding-right: 0">
       <input type="text" placeholder="Nhập để tìm kiếm " class="form-control search" name="search" #query ngModel
              (keyup)="textChangeEvent(query.value)"
              (change)="textChangeEvent(query.value)">
