--- a/src/app/personnels/manager-system/arg-system/arg-backend/arg-backend.component.html
+++ b/src/app/personnels/manager-system/arg-system/arg-backend/arg-backend.component.html
@@ -25,7 +25,7 @@
         <mfDefaultSorter by="controller">Controller</mfDefaultSorter>
       </th>
       <th>
-        <mfDefaultSorter by="activated">Activated</mfDefaultSorter>
+        <mfDefaultSorter by="activated">Trạng thái</mfDefaultSorter>
       </th>
       <th>
             <span class="action-icon" title="Thêm thông tin" (click)="openModal(modal)"><i
@@ -43,7 +43,7 @@
       <td>{{item.httpVerb}}</td>
       <td>{{item.method}}</td>
       <td>{{item.controller}}</td>
-      <td>{{item.activated}}</td>
+      <td>{{item.activated?'Activated':'Not Activated'}}</td>
       <td>
         <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
         <!--<span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove "></i></span>-->
@@ -51,7 +51,7 @@
       </td>
     </tr>
 
-    <tr>
+    <tr class="footer-table-pager">
       <td colspan="8">
         <mfBootstrapPaginator></mfBootstrapPaginator>
       </td>
