--- a/src/app/personnels/search-form/search-form.component.html
+++ b/src/app/personnels/search-form/search-form.component.html
@@ -1,6 +1,6 @@
 <form style="padding-top: 25px" action="">
   <div class="row">
-    <div class="col-xs-12 col-sm-10 col-sn">
+    <div class="col-xs-12 col-sm-10 col-sm-offset-1">
       <div class="form-item">
         <div class="form-item-title">
           {{title}}
