--- a/src/app/personnels/search-statistic/search/search.component.html
+++ b/src/app/personnels/search-statistic/search/search.component.html
@@ -1,7 +1,7 @@
 <app-search-form title="Tìm kiếm cán bộ " (onChoise)="onChoiseHandler($event)"></app-search-form>
 
 
-<modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
+<modal #modal size='sm' cssClass="my-modal-lg" backdrop="true">
 
   <modal-header>
     <div class="action-form mgb-i-10">
@@ -11,18 +11,32 @@
   </modal-header>
 
   <modal-body *ngIf="userDetail">
+    <div class="row">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+        <div class="row">
+          <div class="col-xs-12 col-sm-6">
+            <div class="mgb-15 mgr-20"><span>Mã cán bộ:</span> {{userDetail.username}}</div>
+          </div>
 
-    <div class="mgb-15 mgr-20"><span>Mã cán bộ:</span> {{userDetail.username}}</div>
-    <div class="mgb-15 mgr-20"><span>Họ tên:</span> {{userDetail.fullname}}</div>
-    <div class="mgb-15 mgr-20"><span>Giới tính : </span>{{userDetail.sex == 0?'Nam':'Nữ'}}</div>
-    <div class="mgb-15 mgr-20"><span>Ngày sinh:</span> {{userDetail.birthDay | date:'dd-MM-yyyy'}}</div>
-    <div class="mgb-15 mgr-20"><span>Email:</span> {{userDetail.email}}</div>
-    <div *ngIf="userDetail.organ.level2">
-      <div class="mgb-15"><span>Cán bộ thuộc: </span>  {{userDetail.organ.level2.name}} của {{getMsgFac(userDetail.organ.level1.type)}} {{userDetail.organ.level1.name}}</div>
-    </div>
+          <div class="col-xs-12 col-sm-6">
+            <div *ngIf="userDetail.organ">
+              <div class="mgb-15"><span>Đơn vị: </span> {{userDetail.organ.level1.name}}</div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <div class="mgb-15 mgr-20 capitalize"><span>Họ tên:</span> {{userDetail.fullname.toLowerCase()}}</div>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <div class="mgb-15 mgr-20"><span>Ngày sinh:</span> {{userDetail.birthDay | date:'dd-MM-yyyy'}}</div>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <div class="mgb-15 mgr-20"><span>Giới tính : </span>{{userDetail.sex == 0?'Nam':'Nữ'}}</div>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+            <div class="mgb-15 mgr-20"><span>Email:</span> {{userDetail.email}}</div>
+          </div>
+        </div>
 
-    <div *ngIf="!userDetail.organ.level2">
-      <div class="mgb-15"><span>Cán bộ thuộc</span> {{userDetail.organ.level1.name}}
       </div>
     </div>
   </modal-body>
