lam lai form cua thu tuc nghi viec, thu tuc chuyen don vi cong tac, thu tuc nghi huu,n

--- a/src/app/components/alert-confirm/alert-confirm.component.html
+++ b/src/app/components/alert-confirm/alert-confirm.component.html
@@ -1,4 +1,4 @@
-<modal #modalConfirm size='sm' backdrop="false">
+<modal #modalConfirm size='sm' backdrop="true">
   <modal-header>
     Bạn có chắc chắn muốn xóa ?
   </modal-header>
