--- a/src/app/personnels/manager-personnels/procedure-acesending-salary/procedure-acesending-salary.component.html
+++ b/src/app/personnels/manager-personnels/procedure-acesending-salary/procedure-acesending-salary.component.html
@@ -1,4 +1,4 @@
-<app-search-form title="Làm thủ tục tăng lương " (onChoise)="onChoiseHandler($event)"></app-search-form>
+<app-search-form title="Làm thủ tục tăng lương " [showLeaveBindRetire]="true" (onChoise)="onChoiseHandler($event)"></app-search-form>
 
 
 <modal #modalSalary size='lg' cssClass="my-modal-lg" backdrop="false">
