--- a/src/app/personnels/manager-personnels/procedure-bonus/procedure-bonus.component.html
+++ b/src/app/personnels/manager-personnels/procedure-bonus/procedure-bonus.component.html
@@ -1,4 +1,4 @@
-<app-search-form [title]="title" (onChoise)="onChoiseHandler($event)"></app-search-form>
+<app-search-form [title]="title" [showLeaveBindRetire]="true" (onChoise)="onChoiseHandler($event)"></app-search-form>
 
 <modal #modalBonus size='lg' cssClass="my-modal-lg" backdrop="false">
 
