--- a/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-department/procedure-transfer-department.component.html
@@ -1,5 +1,6 @@
 <app-search-form title=" Làm thủ tục chuyển khoa phòng ban "
                  (onSearch)="onSearchHandler($event)"
+                 [showLeaveBindRetire]="true"
                  (onChoise)="onChoiseHandler($event)" [data]="listUser.toArray()"></app-search-form>
 
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
