--- a/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
@@ -1,4 +1,4 @@
-<app-search-form title="Làm thủ tục chuyển đơn vị công tác " (onChoise)="onChoiseHandler($event)"></app-search-form>
+<app-search-form title="Làm thủ tục chuyển đơn vị công tác " [showLeaveBindRetire]="true" (onChoise)="onChoiseHandler($event)"></app-search-form>
 
 
 <modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
