--- a/src/app/personnels/manager-personnels/user-manager/user-manager.component.html
+++ b/src/app/personnels/manager-personnels/user-manager/user-manager.component.html
@@ -1,6 +1,6 @@
 <app-search-form title="Giao nhiệm vụ" [showRole]="true" (onChoise)="onChoiseHandler($event)"></app-search-form>
 
-<modal #modal size='lg' backdrop="true">
+<modal #modal size='lg' backdrop="false">
 
   <modal-header>
 
