--- a/src/app/personnels/search-statistic/statistic/statistic-person-by-faculty/statistic-person-by-faculty.component.html
+++ b/src/app/personnels/search-statistic/statistic/statistic-person-by-faculty/statistic-person-by-faculty.component.html
@@ -30,7 +30,7 @@
   </div>
   <div class="col-xs-12">
 
-    <p>Tổng số : {{dataUser.length}}</p>
+    <!--<p>Tổng số : {{dataUser.length}}</p>-->
     <app-statistic-table [data]="dataUser" [title]="title"
                          [fields]="fields"
     ></app-statistic-table>
