--- a/src/app/personnels/manager-personnels/procedure-leave-job/procedure-leave-job.component.html
+++ b/src/app/personnels/manager-personnels/procedure-leave-job/procedure-leave-job.component.html
@@ -1,63 +1,9 @@
-<app-search-form  title="Làm thủ tục nghỉ việc " (onChoise)="onChoiseHandler($event)" ></app-search-form>
+<app-search-form title="Làm thủ tục nghỉ việc " [showLeaveBindRetire]="true"
+                 (onChoise)="onChoiseHandler($event)"></app-search-form>
 
-<modal #modalLeaveJob size='lg' cssClass="my-modal-lg" backdrop="false">
-  <modal-header>
-    <div class="action-form mgb-i-10">
-      <button (click)="closeModal(modalLeaveJob)">Thoát</button>
-    </div>
-    <h3 class="text-center">Làm thủ tục nghỉ việc  </h3>
-    <div *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">
-      {{message.content}}
-    </div>
-  </modal-header>
-
-  <modal-body>
-    <form action="" class="mgb-i-10" [formGroup]="formLeaveJob">
-      <div class="row">
-        <div class="row">
-          <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-            <div class="item-control">
-              <label>Mã cán bộ: </label>
-              <input type="text" class="form-control" disabled required formControlName="personnelCode">
-            </div>
-
-            <div class="item-control">
-              <label>Họ tên: </label>
-              <input type="text" class="form-control" disabled  required formControlName="fullName">
-            </div>
-
-
-            <div class="item-control">
-              <label>Số quyết định : </label>
-              <input type="text" class="form-control" #numberDecide required formControlName="numberDecide">
-              <div class="error" *ngIf="numberDecide.value.trim()  =='' && formTouch">
-                Chưa nhập quyết định
-              </div>
-            </div>
-
-            <div class="item-control">
-              <label>Ngày quyết định : </label>
-              <input type="date" class="form-control" #dateDecide required formControlName="dateDecide">
-              <div class="error" *ngIf="dateDecide.value.trim()  =='' && formTouch">
-                Chưa nhập ngày quyết định
-              </div>
-            </div>
-            <div class="item-control ">
-              <label>Nội dung quyết định : </label>
-              <textarea class="form-control mgb-20" style="width: 100%;height: 150px" #contentDecide  formControlName="contentDecide"> </textarea>
-              <div class="error" *ngIf="contentDecide.value.trim()  =='' && formTouch">
-                Chưa nhập nội dung quyết định
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </form>
-  </modal-body>
-
-  <modal-footer>
-    <button class="btn-action" (click)="onProcess()">Xử lý nghỉ việc </button>
-  </modal-footer>
-
-</modal>
+<app-procedure-form (onEdit)="editHandler($event)" #procedureForm [datas]="data.toArray()" title="Làm thủ tục nghỉ việc"
+                    [user]="user"
+                    (onProcess)="onProcess($event)"
+                    (textChange)="textChangeListener($event)"
+                    (onRemove)="removeHandler($event)"></app-procedure-form>
 
